# ComfyUI-Autogen

./: .gitignore  README.md  __init__.py  autogen_assistant_agent.py  autogen_code_executor.py  autogen_groupchat.py  autogen_model.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
tools/: analyze_stock.py  duck_duck_go.py  stock_analysis_tool.py
workflows/: company_report.json
